Added framework in css

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Css</title>
     <link rel="stylesheet" href="css/main.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <style media="print">
-        .parent > div {
+      .parent > div {
         font-size: 100px;
-        }   
+      }
     </style>
   </head>
 
@@ -1009,46 +1009,36 @@ F[]
     </div> -->
     <!-- <div class="image"><img src="/imgs/18-Ways-Programming-Can-Change-Your-Life.png" alt=""></div> -->
 
-<!-- <div class="parent">
+    <!-- <div class="parent">
       <div>Transform</div>
     </div> -->
 
     <!-- <div>Elzero</div> -->
 
+    <!-- <div>Akram</div> -->
 
-<!-- <div>Akram</div> -->
+    <!-- <h2>page title</h2> -->
 
-
-<!-- <h2>page title</h2> -->
-
-
-<!-- <div class="shap">
+    <!-- <div class="shap">
     <div class="box">Box</div>
 </div> -->
 
-
-
-
-<!-- <div class="shape">
+    <!-- <div class="shape">
     <span class="origin"></span>
     <div class="box">Box</div>
 </div> -->
 
-
-
-<!-- <div class="shape">
+    <!-- <div class="shape">
     <span class="origin"></span>
     <div class="box">Box</div>
 </div> -->
 
-
-
-<!-- <div class="shape">
+    <!-- <div class="shape">
     <span class="origin"></span>
     <div class="box">Box</div>
 </div> -->
 
-<!-- 
+    <!-- 
 <div class="cont">
     <div class="box">
         <div class="face front">front</div>
@@ -1056,47 +1046,36 @@ F[]
     </div>
 </div> -->
 
-
-<!-- <div class="cont">
+    <!-- <div class="cont">
     <div class="box">
         <div class="face front">front</div>
         <div class="face back">back</div>
     </div>
 </div> -->
 
-<!-- <h1>Elzero</h1> -->
+    <!-- <h1>Elzero</h1> -->
 
+    <!-- <h1>Elzero</h1> -->
 
+    <!-- <div></div> -->
 
-<!-- <h1>Elzero</h1> -->
+    <!-- <div>Animation</div> -->
 
-<!-- <div></div> -->
+    <!-- <div></div> -->
 
+    <!-- <div>👌</div> -->
 
-
-<!-- <div>Animation</div> -->
-
-
-<!-- <div></div> -->
-
-
-
-<!-- <div>👌</div> -->
-
-
-
-<!-- <div class="load">
+    <!-- <div class="load">
     <div class="one"></div>
     <div class="two"></div>
     <div class="three"></div>
 </div> -->
 
+    <!-- <div></div> -->
 
-<!-- <div></div> -->
+    <!-- <span></span> -->
 
-<!-- <span></span> -->
-
-<!-- <div title="one div">Hello</div>
+    <!-- <div title="one div">Hello</div>
 <h1>hi</h1>
 <div title="two div">Hello</div>
 <p>pp</p>
@@ -1105,9 +1084,7 @@ F[]
 <div title="s0">Hello</div>
 <div title="s1">Hello</div> -->
 
-
-
-<!-- <p>paragraph</p>
+    <!-- <p>paragraph</p>
 <p>paragraph</p>
 <p>paragraph</p>
 
@@ -1133,7 +1110,7 @@ F[]
     <h4>h5</h4>
 </div> -->
 
-<!-- <p>paragraph</p>
+    <!-- <p>paragraph</p>
 <p>paragraph</p>
 <p class="special">paragraph</p>
 <p>paragraph</p>
@@ -1146,8 +1123,7 @@ F[]
 <p>paragraph</p>
  -->
 
-
- <!-- <div>one</div>
+    <!-- <div>one</div>
  <div></div>
     <form action="">
       <div>
@@ -1167,16 +1143,13 @@ F[]
        
     </form> -->
 
-
-<!-- <div class="main red">Elzero</div>
+    <!-- <div class="main red">Elzero</div>
 <div class="main">Testing</div>
 <div class="red">Testing</div>
 <div class="main red">Elzero</div>
 <p class="main red">Testing</p> -->
 
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
   <div class="child">Testing</div>
   <div class="child">Elzero</div>
 </div>
@@ -1187,9 +1160,7 @@ F[]
 </div>
 <div class="child">Testing</div> -->
 
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
   <div class="baby">Testing</div>
   <div class="baby">Testing</div>
 </div>
@@ -1204,8 +1175,7 @@ F[]
 </div>
 <div class="baby">Testing</div> -->
 
-
-<!-- <p>Testing</p>
+    <!-- <p>Testing</p>
 <div>Testing</div>
 <div>Testing</div>
 <div title="Elzero">Elzero</div>
@@ -1222,7 +1192,7 @@ F[]
   <div title="Elzero">Testing</div>
 </div> -->
 
-<!-- <div>
+    <!-- <div>
   <p>Testing</p>
   <div title="Elzero">Testing</div>
   <p>Testing</p>
@@ -1251,9 +1221,7 @@ F[]
   <div>Testing</div>
 </div> -->
 
-
-
-<!-- <div>
+    <!-- <div>
   <div>Testing</div>
   <div>Testing</div>
   <div>Elzero</div>
@@ -1274,8 +1242,7 @@ F[]
   <div>Testing</div>
 </div> -->
 
-
-<!-- <div>
+    <!-- <div>
   <h3>Testing</h3>
   <div>Testing</div>
   <h3>Testing</h3>
@@ -1322,7 +1289,7 @@ F[]
   <div>Testing</div>
 </div> -->
 
-<!-- <div>
+    <!-- <div>
   <div>Testing</div>
   <div>Elzero</div>
   <div>Elzero</div>
@@ -1332,27 +1299,21 @@ F[]
   <div>Testing</div>
 </div> -->
 
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div>1</div>
     <div>2</div>
     <div>3</div>
     <div>4</div>
 </div> -->
 
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div>1</div>
     <div>2</div>
     <div>3</div>
     <div>4</div>
 </div> -->
 
-
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div>1</div>
     <div>2</div>
     <div>3</div>
@@ -1363,14 +1324,9 @@ F[]
     <div>8</div>
 </div> -->
 
+    <!-- <div class="assign-one">Elzero Web School</div> -->
 
-
-
-<!-- <div class="assign-one">Elzero Web School</div> -->
-
-
-
-<!-- <div class="parent">
+    <!-- <div class="parent">
     <div> product one
         <p>this is product</p>
     </div>
@@ -1388,7 +1344,7 @@ F[]
     </div>
 </div> -->
 
-<div class="parent">
+    <!-- <div class="parent">
     <div class="one">
         <h3> product one</h3>
         <p>this is product</p>
@@ -1408,7 +1364,29 @@ F[]
         <h3>product four</h3>
         <p>this is product</p>
     </div>
-</div> 
+</div>  -->
+
+<!-- <div class="parent">
+    <div class="center-position circle-100 center-flex" >child</div>
+</div>
+<div class="product center-position circle-200 center-flex">product</div> -->
+
+
+<!-- <div>
+      <span>Span</span>
+      <strong>Strong</strong>
+      <span>Span</span>
+      <p>Paragraph</p>
+      <button>Button</button>
+    </div> -->
+
+
+
+
+<div class="arrow top">Elzero</div>
+<div class="arrow right">Elzero</div>
+<div class="arrow bottom">Elzero</div>
+<div class="arrow left">Elzero</div>
 
   </body>
 </html>
