Added assinment in css

--- a/CSS_Project/index.html
+++ b/CSS_Project/index.html
@@ -1383,10 +1383,15 @@ F[]
 
 
 
-<div class="arrow top">Elzero</div>
+<!-- <div class="arrow top">Elzero</div>
 <div class="arrow right">Elzero</div>
 <div class="arrow bottom">Elzero</div>
-<div class="arrow left">Elzero</div>
+<div class="arrow left">Elzero</div> -->
+
+
+<div class="elzero-lines">Lines</div>
+
+<!-- <div class="elzero-lines">Lines</div> -->
 
   </body>
 </html>
