--- a/template-1/index.html
+++ b/template-1/index.html
@@ -72,12 +72,12 @@
         </div>
         <div class="feat">
           <i class="fas fa-globe-asia fa-3x"></i>
-          <h3>Your Product is Worldwide </h3>
+          <h3>Your Product is Worldwide</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
             officia tenetur unde suscipit vel animi illum libero impedit
             explicabo dolore ab voluptatum quo possimus id, quas omnis quia
-            fugiat ad.
+            fugiat
           </p>
         </div>
       </div>
